Fix: z-index y tamaños en header

--- a/assets/scss/containers/_header.scss
+++ b/assets/scss/containers/_header.scss
@@ -25,13 +25,9 @@
 
         img {
           transition: $transition-default;
-          height: 3rem;
+          height: 2rem;
           width: auto;
           border: none;
-
-          @include mq($until: mobile) {
-            max-height: 2rem;
-          }
         }
       }
     }
@@ -127,6 +123,7 @@
   @include mq($until: mobile) {
     position: sticky;
     top: 0;
+    z-index: $z-index;
 
     &.nav-up,
     &.nav-down {
